feat: :sparkles: Improved validations and user security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,11 @@ spring.jpa.show-sql=true
 spring.security.jwt.secret=SecretKeyForJWTGeneration
 spring.security.jwt.expiration=86400000
 
+# Swagger Configuration
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
+spring.jpa.open-in-view=false
 
